Squashed commit of the following:
commit 042b2d13e2dc970e1a66c471cb8e9671fd110fb1
Author: Javier A. Ortiz Bultron <javier.ortiz.78@gmail.com>
Date:   Thu Mar 19 10:01:17 2026 -0500

    feat: implement expansion pack management and dynamic content filtering (#211)

    * feat(data): Implement expansion grouping and member-driven availability schema

    * conductor(plan): Mark phase 'Phase 1: Data Model' as complete

    * feat(service): Implement expansion-aware filtering logic for wrestlers, teams, and factions

    * feat(ui): Implement Expansion Management UI and fix data filtering across views

    * docs(conductor): Synchronize docs for track 'Content Set Grouping'

    * docs: Update in-game documentation and tests for Expansion Management

    * Update images

    * fix(conductor): Apply review suggestions for track 'Content Set Grouping'

    * conductor(plan): Mark task 'Apply review suggestions' as complete

    * chore(conductor): Archive track 'Content Set Grouping'

    * chore(conductor): Update archived tracks section

    * Formatting

    * Squashed commit of the following:

    commit e0bf4c9405fb70b969d0cd3bac9e39abc815e297
    Author: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
    Date:   Thu Mar 19 08:38:36 2026 -0500

        Build(deps): Bump org.apache.maven.plugins:maven-surefire-plugin (#209)

        Bumps [org.apache.maven.plugins:maven-surefire-plugin](https://github.com/apache/maven-surefire) from 3.5.4 to 3.5.5.
        - [Release notes](https://github.com/apache/maven-surefire/releases)
        - [Commits](https://github.com/apache/maven-surefire/compare/surefire-3.5.4...surefire-3.5.5)

        ---
        updated-dependencies:
        - dependency-name: org.apache.maven.plugins:maven-surefire-plugin
          dependency-version: 3.5.5
          dependency-type: direct:production
          update-type: version-update:semver-patch
        ...

        Signed-off-by: dependabot[bot] <support@github.com>
      